--- a/_config.yml
+++ b/_config.yml
@@ -11,13 +11,13 @@
 title: 'ATPESC 2018 Math Library Hands On Exercises'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: 'Software Carpentry Style Lessons for ATPESC'
+slogan: 'So my code will see the future'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: '»Feeling Responsive« is a responsive theme for Jekyll based on the fabulous foundation framework with beautiful typography and a bright color palette.'
+description: 'Sofware Carpentry Style Lessons for Numerical Libraries'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
-credits: '<p>Created with &hearts; by <a href="https://github.com/markcmiller86">Mark C Miller</a> with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
+credits: '<p>Created by <a href="https://github.com/markcmiller86">Mark C Miller</a> with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
 
 # Main author of the website
 # See > authors.yml
@@ -30,7 +30,7 @@ baseurl: '/atpesc2018'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
-improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
+improve_content: https://markcmiller86.github.io/atpesc2018/edit/gh-pages
 
 # This URL points directly to the images directory making
 # things easier to link to images in posts and templates. It needs a slash at the end.
@@ -75,7 +75,6 @@ exclude:
     - LICENSE
     - README.md
     - INSTALL.md
-
 
 # The language setting is used in /includes/header.html for html-settings
 language: 'en'
@@ -269,3 +268,7 @@ asciidoctor:
     source-highlighter: coderay
     coderay-css: style
     icons: font
+
+# For Atom RSS feed
+#plugins:
+#  - jekyll-feed
