--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@
 # 3. Change default post/page authors in config.yml
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
-mcmiller: # replace this with your info
+markcmiller86: # replace this with your info
   name: "Mark C Miller"
   siterole: "content-developer, lesson-developer"
   uri: https://github.com/markcmiller86
