--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,7 +31,7 @@
     url: "/lessons/hand_coded_heat/"
 
 - title: Packages
-  url: "fastmath-scidac.org"
+  url: "https://fastmath-scidac.org"
   side: left
   dropdown:
   - title: "PETSc"
