fix config root paths for github gen

--- a/_config.yml
+++ b/_config.yml
@@ -25,12 +25,12 @@ author: markcmiller86
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://markcmiller86.github.io'
-baseurl: '/atpesc2018'
+url: 'https://xsdk-project.github.io'
+baseurl: '/ATPESC2018HandsOnLessons'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
-improve_content: https://markcmiller86.github.io/atpesc2018/edit/gh-pages
+improve_content: https://xsdk-project.github.io/ATPESC2018HandsOnLessons//edit/gh-pages
 
 # This URL points directly to the images directory making
 # things easier to link to images in posts and templates. It needs a slash at the end.
@@ -38,7 +38,7 @@ improve_content: https://markcmiller86.github.io/atpesc2018/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://markcmiller86.github.io/atpesc2018/images/'
+urlimg: 'https://xsdk-project.github.io/ATPESC2018HandsOnLessons/images/'
 
 # Logo size is 600x80 pixels
 logo: "logo.png"
