change top-level packages nav to fastmath software catalog

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -33,7 +33,7 @@
     url: "/lessons/superlu_mfem/"
 
 - title: Packages
-  url: "https://fastmath-scidac.org"
+  url: "https://fastmath-scidac.org/software-catalog.html"
   side: left
   dropdown:
   - title: "PETSc"
