--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ slogan: 'So my code will see the future'
 description: 'Sofware Carpentry Style Lessons for Numerical Libraries'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
-credits: '<p>Created by <a href="https://github.com/markcmiller86">Mark C Miller</a> with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
+credits: 'Created by <a href="https://github.com/markcmiller86">Mark C Miller</a> with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
 
 # Main author of the website
 # See > authors.yml
@@ -30,7 +30,7 @@ baseurl: '/ATPESC2018HandsOnLessons'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
-improve_content: https://xsdk-project.github.io/ATPESC2018HandsOnLessons/edit/gh-pages
+improve_content: https://github.com/xsdk-project/ATPESC2018HandsOnLessons/edit/gh-pages
 
 # This URL points directly to the images directory making
 # things easier to link to images in posts and templates. It needs a slash at the end.
