fixing footer; adding edit on github button

--- a/_data/language.yml
+++ b/_data/language.yml
@@ -18,7 +18,7 @@ click_here: "click here"
 next_post_in: "Next Post in"
 previous_post_in: "Previous Post in"
 breadcrumb_start: "Start"
-edit: "Edit"
+edit: "Edit This Page On GitHub"
 this_content_is_open_source: "This content is open source."
 help_improve_it: "Help improve it"
 enter_search_term: "Enter search term and hit enter"
