--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@
   url: "/lessons/"
   side: left
   dropdown:
+  - title: "Setup Instructions"
+    url: "/setup_instructions/"
   - title: "Hand Coded Heat"
     url: "/lessons/hand_coded_heat/"
   - title: "Sparse Direct Solvers"
