--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@
     url: "/lessons/superlu_mfem/"
   - title: "Time Integration & Non-Linear Solvers"
     url: "/lessons/time_integrators/"
-  - title: "Krylov Solvers, Algebraic Multigrid and Data Structures"
+  - title: "Krylov Solvers and Algebraic Multigrid"
     url: "/lessons/krylov_amg/"
 
 - title: Packages
