--- a/_lessons/hand_coded_heat/heatapp/makefile
+++ b/_lessons/hand_coded_heat/heatapp/makefile
@@ -1,18 +1,18 @@
-# Implicit rule for object files
-%.o : %.C
-	$(CXX) -c $(CXXFLAGS) $(CPPFLAGS) $< -o $@
-
 RM ?= rm -rf
 
 SRC = heat.C args.C ftcs.C upwind15.C crankn.C
 OBJ = $(SRC:.C=.o)
 EXE = heat
 
+# Implicit rule for object files
+%.o : %.C
+	$(CXX) -c $(CXXFLAGS) $(CPPFLAGS) $< -o $@
+
 # Linking the final heat app
 heat: $(OBJ)
 	$(CXX) -o heat $(OBJ) -lm
 
-check:
+check: $(EXE)
 	@./heat 1>/dev/null 2>&1
 	@diff heat_soln_final.curve heat_soln_check.curve; \
 	if [[ $$? -eq 0 ]]; then \
