--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@
     url: "/lessons/krylov_amg/"
   - title: "Sparse Direct Solvers"
     url: "/lessons/superlu_mfem/"
-  - title: "Numerical Optimzation (Adjoint)"
+  - title: "Numerical Optimization (Adjoint)"
     url: "/lessons/adjoint/"
   - title: "Numerical Optimization"
     url: "/lessons/obstacle_tao"
@@ -56,7 +56,6 @@
     url: "/design/"
   - title: "Full Documentation"
     url: "/documentation/"
-  
 
 - title: "Search"
   url: "/search/"
