fixing superlu link; adjusting to presentation order

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -25,16 +25,18 @@
   url: "https://fastmath-scidac.org/software-catalog.html"
   side: left
   dropdown:
+  - title: "MFEM"
+    url: "http://mfem.org"
+  - title: "PUMI"
+    url: "https://www.scorec.rpi.edu/pumi"
   - title: "PETSc"
     url: "https://www.mcs.anl.gov/petsc/"
   - title: "HYPRE"
     url: "https://computation.llnl.gov/projects/hypre-scalable-linear-solvers-multigrid-methods"
-  - title: "MFEM"
-    url: "http://mfem.org"
   - title: "SuperLU"
-    url: "https://github.com/xiaoyeli/superlu"
-  - title: "PUMI"
-    url: "https://www.scorec.rpi.edu/pumi"
+    url: "https://github.com/xiaoyeli/superlu_dist"
+  - title: "Tao"
+    url: "http://www.mcs.anl.gov/research/projects/tao/tao-deprecated/index.html"
   - title: "SUNDIALS"
     url: "https://computation.llnl.gov/projects/sundials"
   - title: "AMReX"
