--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ author: markcmiller86
 #
 url: 'https://xsdk-project.github.io'
 baseurl: '/ATPESC2018HandsOnLessons'
+handson_root: '/projects/ATPESC2018/FASTMath/HandsOnLessons'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
