testing github build

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 - title: Intro
-  url: ""
+  url: "https://xsdk-project.github.io/ATPESC2018HandsOnLessons"
   side: left
   dropdown:
   - title: "Agenda"
