--- a/_lessons/hand_coded_heat/heatapp/makefile
+++ b/_lessons/hand_coded_heat/heatapp/makefile
@@ -1,3 +1,4 @@
+# ./heat alpha=8.2e-10 lenx=0.25 dx=0.01 dt=100 maxt=5580000 outi=100 savi=1000 bc0=233.15 bc1=294.261 ic="const(294.261)"
 PTOOL ?= visit
 RUNAME ?= heat_results
 RM = rm -rf
