--- a/_lessons/obstacle_tao/makefile
+++ b/_lessons/obstacle_tao/makefile
@@ -1,18 +1,18 @@
 # Define the MFEM directories here
-MFEM_DIR = /projects/ATPESC2018/FASTMath/spark/mfem
-MFEM_BUILD_DIR = /projects/ATPESC2018/FASTMath/spark/mfem
-CONFIG_MK = $(MFEM_BUILD_DIR)/config/config.mk
-CC = $(PETSC_DIR)/$(PETSC_ARCH)/bin/mpic++
--include $(CONFIG_MK)
+MFEM_DIR=/projects/ATPESC2018/FASTMath/spack/opt/spack/linux-rhel7-x86_64/gcc-4.8.5/mfem-develop-shrxlv7z4whbh2476qpdhuwtf6frzatv
+PETSC_DIR=/projects/ATPESC2018/FASTMath/spack/opt/spack/linux-rhel7-x86_64/gcc-4.8.5/petsc-develop-xufshydc44bard4v7qinrl2nfetl7fcm
 
+CONFIG_MK = $(MFEM_DIR)/share/mfem/config.mk
+-include $(CONFIG_MK)
 .SUFFIXES: .o .cpp .mk
 .PHONY: all clean
+.cpp.o:
+	$(MFEM_CXX) $(MFEM_FLAGS) -c $<
 
 all: obstacle
 
-obstacle:
-	$(CC) obstacle.cpp $(MFEM_LIB_FILE) $(CONFIG_MK) $(MFEM_CXX) $(MFEM_FLAGS) $< -o $@ -L/usr/local/lib/gcc/4.9 $(MFEM_LIBS)
-
+obstacle: obstacle.o
+	$(MFEM_CXX) $(MFEM_FLAGS) $< -o $@ $(MFEM_LIBS) $(LDFLAGS)
 clean:
 	rm -f *.o *~ obstacle
-	rm -rf *.dSYM *.TVD.*breakpoints
+	rm -rf *.dSYM *.TVD.*breakpoints obstacle_*
