--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ url: 'https://xsdk-project.github.io'
 baseurl: '/ATPESC2018HandsOnLessons'
 handson_install_root: '/projects/ATPESC2018/FASTMath'
 handson_root: 'HandsOnLessons'
+audience: ['public', 'private']
 
 # Controls whether lesson answer expansions are hidden or not
 handson_hide_qanda: false
