--- a/_lessons/hand_coded_heat/heatapp/makefile
+++ b/_lessons/hand_coded_heat/heatapp/makefile
@@ -1,7 +1,7 @@
 # ./heat alpha=8.2e-10 lenx=0.25 dx=0.01 dt=100 maxt=5580000 outi=100 savi=1000 bc0=233.15 bc1=294.261 ic="const(294.261)"
 PTOOL ?= visit
 RUNAME ?= heat_results
-RM = rm -rf
+RM = rm
 
 SRC = heat.C utils.C args.C exact.C ftcs.C upwind15.C crankn.C
 OBJ = $(SRC:.C=.o)
@@ -15,8 +15,8 @@ EXE = heat
 heat: $(OBJ)
 	$(CXX) -o heat $(OBJ) -lm
 
-objclean:
-	$(RM) $(OBJ)
+clean:
+	$(RM) $(OBJ) $(EXE)
 
 plot:
 	@./tools/run_$(PTOOL).sh $(RUNAME)
