switching live site config to public-only viewing and hiding of qandas; adding Putting it all together to agenda

--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -26,5 +26,4 @@ sass:
 google_analytics_tracking_id: false
 
 handson_hide_qanda: false
-#audience: ['public', 'private']
-audience: ['public']
+audience: ['public', 'private']
