--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,11 @@ url: 'https://xsdk-project.github.io'
 baseurl: '/ATPESC2018HandsOnLessons'
 handson_install_root: '/projects/ATPESC2018/FASTMath'
 handson_root: 'HandsOnLessons'
-audience: ['public', 'private']
+#audience: ['public', 'private']
+audience: ['public']
 
 # Controls whether lesson answer expansions are hidden or not
-handson_hide_qanda: false
+handson_hide_qanda: true 
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
