--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,12 +3,14 @@
   url: "/"
   side: left
   dropdown:
-  - title: "ATPESC Overall Agenda"
-    url: "http://extremecomputingtraining.anl.gov/agenda-2018/"
-  - title: "Today's Agenda"
-    url: "/atpesc_2018_agenda/"
+  - title: "About Your Day"
+    url: "/about_your_day/"
   - title: "Setup Instructions"
     url: "/setup_instructions/"
+  - title: "Today's Agenda"
+    url: "/atpesc_2018_agenda/"
+  - title: "ATPESC Overall Agenda"
+    url: "http://extremecomputingtraining.anl.gov/agenda-2018/"
   - title: "ALCF User Guides"
     url: "https://www.alcf.anl.gov/user-guides"
   - title: "Open Chat"
