adding one-on-one schedule

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,8 +13,8 @@
     url: "https://www.alcf.anl.gov/user-guides"
   - title: "Open Chat"
     url: "https://hangouts.google.com/group/wuWDDdPe4mX1u0v83"
-  - title: "One-on-One Signup Form"
-    url: "https://goo.gl/forms/KGzU8lr9WqvEBoL92"
+  - title: "One-on-One Schedule"
+    url: "/pages/one_on_one_schedule.html"
   - title: "Submit a Show Your Work"
     url: "https://goo.gl/forms/B7UFpBvEOJbC58oJ2"
 
