--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ url: 'https://xsdk-project.github.io'
 baseurl: '/ATPESC2018HandsOnLessons'
 handson_install_root: '/projects/ATPESC2018/FASTMath'
 handson_root: 'HandsOnLessons'
-#audience: ['public', 'private']
-audience: ['public']
+audience: ['public', 'private']
+#audience: ['public']
 
 # Controls whether lesson answer expansions are hidden or not
 handson_hide_qanda: false
